--- a/forms/fSearch.resx
+++ b/forms/fSearch.resx
@@ -124,6 +124,6 @@
     <value>Current File</value>
   </data>
   <data name="SingleThread" xml:space="preserve">
-    <value>Current Request</value>
+    <value>Current Thread</value>
   </data>
 </root>
